# privacyshield

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md
airguard/: README.md  privacyshield.patch
findmy/: README.md  _login.py  create_map.py  get_airtag.py  precompute_keys.py  privacyshield.patch  requirements.txt
relay-fw/: Makefile  README.md
relay-fw/src/: CMakeLists.txt  sdkconfig.defaults
relay-fw/src/components/airtag/: CMakeLists.txt  airtag.c  airtag.h
relay-fw/src/components/microjson/: CMakeLists.txt  mjson.c  mjson.h
relay-fw/src/main/: CMakeLists.txt  Kconfig.projbuild  main.c
server/: README.md  server.py
sniffle/: Dockerfile  compose.yaml
sniffle/fw/: sniffle.syscfg
sniffle/python_cli/: relayer.py  requirements.txt  sniff_receiver.py  sniffer.py
